# agent-messenger

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
deploy/: Caddyfile  agent-messenger.service  env.example  install.sh  nginx.conf
docs/: API_QUICKSTART.md  BRANCH_PROTECTION.md  DEPLOYMENT.md  IMPLEMENTATION_ORDER.md  MANUAL.md  RELEASE_PROCESS.md  openapi.yaml
linux/: .gitignore  README.md  config.example.json  install.sh  pyproject.toml  requirements.txt
linux/data/: com.joelclaw.agentmessenger.desktop  com.joelclaw.agentmessenger.metainfo.xml
linux/src/: __init__.py  client.py  config.py  main.py  notifications.py  styles.py  tray.py  window.py
linux/tests/: __init__.py  test_app.py  test_client.py  test_config.py  test_integration.py  test_notifications.py  test_tray.py
memory/: agent-messenger-tasks.md
protocol/: README.md
sdk/: .gitignore
sdk/python/: README.md  pyproject.toml
sdk/python/agent_messenger/: __init__.py  client.py  rest.py  types.py  websocket.py
sdk/python/tests/: __init__.py  test_client.py  test_integration.py  test_rest.py  test_websocket.py
server/: .gitignore  Dockerfile  admin_auth_test.go  attachments.go  attachments_test.go  auth.go  auth_test.go  batch_test.go  chaos_test.go  conversation_metadata_test.go  conversations.go  cors_test.go  cover.html  coverage_boost10_test.go  coverage_boost11_test.go  coverage_boost12_test.go  coverage_boost13_test.go  coverage_boost14_test.go  coverage_boost15_test.go  coverage_boost16_test.go  coverage_boost17_test.go  coverage_boost18_test.go  coverage_boost19_test.go  coverage_boost20_test.go  coverage_boost21_test.go  coverage_boost22_test.go  coverage_boost23_test.go  coverage_boost24_test.go  coverage_boost25_test.go  coverage_boost26_test.go  coverage_boost27_test.go  coverage_boost28_test.go  (+106 more)
(+145 files in other folders)
