[project]
name = "agent-messenger-linux"
version = "0.1.0"
description = "GTK4/Adwaita desktop client for Agent Messenger"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.50.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
agent-messenger = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"