[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-messenger"
version = "0.1.0"
description = "Client SDK for Agent Messenger — self-hosted messaging between humans and AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Agent Messenger Contributors"},
]
keywords = ["agent", "messenger", "websocket", "chat", "ai", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ws = ["websockets>=12.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "websockets>=12.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_messenger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"